--- a/package.json
+++ b/package.json
@@ -6,13 +6,26 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@yaireo/tagify": "^4.0.5",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^5.0.0-beta3",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "http": "0.0.1-security",
+    "path": "^0.12.7",
+    "pg": "^8.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
+    "sequelize": "^6.6.2",
+    "sqlite3": "^5.0.2",
+    "web-vitals": "^1.1.1",
+    "ws": "^7.4.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
